--- a/src/pages/estilo.css
+++ b/src/pages/estilo.css
@@ -212,7 +212,7 @@ img{
 
 			font-size: 30px;
   color: white;
-  padding: 1px 0 0px 0;
+  padding:  0;
   font-family: Arial,sans-serif;
   font-weight: bold;
   text-align: center;
