--- a/src/pages/estilo.css
+++ b/src/pages/estilo.css
@@ -7,9 +7,6 @@ body {
 	background: #4A525A;
 }
 
-Link{
-	padding-bottom: 0;
-}
 
 #geral{
 	width: 960px;
@@ -179,6 +176,14 @@ p {
   padding-bottom: 15px;
 }
 
+#titulo{
+	float: center;
+}
+
+#imagem{
+	float: left;
+}
+
 img{
 	border-radius: 20px;
 }
@@ -210,7 +215,7 @@ img{
 
 #h111{
 
-			font-size: 30px;
+	font-size: 30px;
   color: white;
   padding:  0;
   font-family: Arial,sans-serif;
