--- a/src/pages/estilo.css
+++ b/src/pages/estilo.css
@@ -9,7 +9,7 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #000;
-	background: #4A525A;
+	background-image: linear-gradient(to top, #3E78B2,#4A525A);
 }
 
 
